--- a/Notebooks/Pandas Notebook.ipynb
+++ b/Notebooks/Pandas Notebook.ipynb
@@ -1,18 +1,21 @@
 {
     "cells": [
         {
-            "cell_type": "code",
-            "execution_count": 6,
+            "cell_type": "markdown",
             "source": [
-                "import pandas as pd"
+                "# Pandas Library Cheat Sheet\r\n",
+                "### This notebook is my attempt to understand and learn the Pandas library.\r\n",
+                "***\r\n",
+                "<br>First of all, we are going to import the library:"
             ],
-            "outputs": [],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": null,
-            "source": [],
+            "execution_count": 1,
+            "source": [
+                "import pandas as pd"
+            ],
             "outputs": [],
             "metadata": {}
         }
