--- a/Notebooks/Pandas Notebook.ipynb
+++ b/Notebooks/Pandas Notebook.ipynb
@@ -12,11 +12,39 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 4,
             "source": [
                 "import pandas as pd"
             ],
             "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "***\r\n",
+                "## Dataframe Basics:\r\n",
+                "\r\n",
+                "Dataframe is the main object in the Pandas framework and is a way to represent data with rows and columns.\r\n",
+                "<br>In order to get the dataframe as a variable we will use the following command:"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 6,
+            "source": [
+                "df = pd.read_csv(\"C:/Users/mhyms/Documents/Files/Python/Dataframes/Doomsday survial rate.csv\")"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "We are going to put the files directory as a string parameter in the `read_csv()` function.\r\n",
+                "<br>In this case we are using the survival rate of the people after a apocalyptic scenerio."
+            ],
             "metadata": {}
         }
     ],
