--- a/Notebooks/pandas tutorial/Pandas Notebook.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook.ipynb
@@ -12,7 +12,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 71,
+            "execution_count": 47,
             "source": [
                 "import pandas as pd"
             ],
@@ -32,7 +32,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 72,
+            "execution_count": 48,
             "source": [
                 "df = pd.read_csv(\"C:/Users/mhyms/Documents/Files/Python/Dataframes/Doomsday survial rate.csv\")"
             ],
@@ -49,7 +49,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 73,
+            "execution_count": 49,
             "source": [
                 "df"
             ],
@@ -58,13 +58,13 @@
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "  Name;Date;Survival Rate;Number of People;Temperature\n",
-                            "0                     Ankara;1.01.2021;0.5;150000;15  \n",
-                            "1                     London;1.02.2021;0.4;250000;25  \n",
-                            "2                 New York;1.03.2021;0.3;15000000;30  \n",
-                            "3                     Paris;1.04.2021;0.2;5400000;10  \n",
-                            "4                    Tokyo;1.05.2021;0.1;99000000;55  \n",
-                            "5                     Moscow;1.06.2021;0.0;34000;-20  "
+                            "  Name;Date;Survival Rate;Number of People;Temperature;Bitcoin\n",
+                            "0               Ankara;1.01.2021;0.5;150000;15;45000          \n",
+                            "1               London;1.02.2021;0.4;250000;25;85000          \n",
+                            "2           New York;1.03.2021;0.3;15000000;30;90000          \n",
+                            "3               Paris;1.04.2021;0.2;5400000;10;20000          \n",
+                            "4              Tokyo;1.05.2021;0.1;99000000;55;60000          \n",
+                            "5              Moscow;1.06.2021;0.0;34000;-20;150000          "
                         ],
                         "text/html": [
                             "<div>\n",
@@ -85,33 +85,33 @@
                             "  <thead>\n",
                             "    <tr style=\"text-align: right;\">\n",
                             "      <th></th>\n",
-                            "      <th>Name;Date;Survival Rate;Number of People;Temperature</th>\n",
+                            "      <th>Name;Date;Survival Rate;Number of People;Temperature;Bitcoin</th>\n",
                             "    </tr>\n",
                             "  </thead>\n",
                             "  <tbody>\n",
                             "    <tr>\n",
                             "      <th>0</th>\n",
-                            "      <td>Ankara;1.01.2021;0.5;150000;15</td>\n",
+                            "      <td>Ankara;1.01.2021;0.5;150000;15;45000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>1</th>\n",
-                            "      <td>London;1.02.2021;0.4;250000;25</td>\n",
+                            "      <td>London;1.02.2021;0.4;250000;25;85000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>2</th>\n",
-                            "      <td>New York;1.03.2021;0.3;15000000;30</td>\n",
+                            "      <td>New York;1.03.2021;0.3;15000000;30;90000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>3</th>\n",
-                            "      <td>Paris;1.04.2021;0.2;5400000;10</td>\n",
+                            "      <td>Paris;1.04.2021;0.2;5400000;10;20000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>4</th>\n",
-                            "      <td>Tokyo;1.05.2021;0.1;99000000;55</td>\n",
+                            "      <td>Tokyo;1.05.2021;0.1;99000000;55;60000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>5</th>\n",
-                            "      <td>Moscow;1.06.2021;0.0;34000;-20</td>\n",
+                            "      <td>Moscow;1.06.2021;0.0;34000;-20;150000</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table>\n",
@@ -119,7 +119,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 73
+                    "execution_count": 49
                 }
             ],
             "metadata": {}
@@ -133,7 +133,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 100,
+            "execution_count": 50,
             "source": [
                 "survivalRate = {\r\n",
                 "    'City Name' : [\"Ankara\", \"London\", \"New York\", \"Paris\", \"Tokyo\", \"Moscow\"],\r\n",
@@ -150,7 +150,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 75,
+            "execution_count": 71,
             "source": [
                 "dataFrame"
             ],
@@ -159,13 +159,13 @@
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "  City Name       Date  Survival Rate  Number of People  Temperature\n",
-                            "0    Ankara  1.01.2021            0.5            150000           15\n",
-                            "1    London  2.01.2021            0.4            250000           25\n",
-                            "2  New York  3.01.2021            0.3          15000000           30\n",
-                            "3     Paris  4.01.2021            0.2            540000           10\n",
-                            "4     Tokyo  5.01.2021            0.1          99000000           55\n",
-                            "5    Moscow  6.01.2021            0.0             34000          -20"
+                            "        Date City Name  Survival Rate  Number of People  Temperature\n",
+                            "0  1.01.2021    Ankara            0.5            150000           15\n",
+                            "1  2.01.2021    London            0.4            250000           25\n",
+                            "2  3.01.2021  New York            0.3          15000000           30\n",
+                            "3  4.01.2021     Paris            0.2            540000           10\n",
+                            "4  5.01.2021     Tokyo            0.1          99000000           55\n",
+                            "5  6.01.2021    Moscow            0.0             34000          -20"
                         ],
                         "text/html": [
                             "<div>\n",
@@ -186,8 +186,8 @@
                             "  <thead>\n",
                             "    <tr style=\"text-align: right;\">\n",
                             "      <th></th>\n",
-                            "      <th>City Name</th>\n",
                             "      <th>Date</th>\n",
+                            "      <th>City Name</th>\n",
                             "      <th>Survival Rate</th>\n",
                             "      <th>Number of People</th>\n",
                             "      <th>Temperature</th>\n",
@@ -196,48 +196,48 @@
                             "  <tbody>\n",
                             "    <tr>\n",
                             "      <th>0</th>\n",
-                            "      <td>Ankara</td>\n",
                             "      <td>1.01.2021</td>\n",
+                            "      <td>Ankara</td>\n",
                             "      <td>0.5</td>\n",
                             "      <td>150000</td>\n",
                             "      <td>15</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>1</th>\n",
-                            "      <td>London</td>\n",
                             "      <td>2.01.2021</td>\n",
+                            "      <td>London</td>\n",
                             "      <td>0.4</td>\n",
                             "      <td>250000</td>\n",
                             "      <td>25</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>2</th>\n",
-                            "      <td>New York</td>\n",
                             "      <td>3.01.2021</td>\n",
+                            "      <td>New York</td>\n",
                             "      <td>0.3</td>\n",
                             "      <td>15000000</td>\n",
                             "      <td>30</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>3</th>\n",
-                            "      <td>Paris</td>\n",
                             "      <td>4.01.2021</td>\n",
+                            "      <td>Paris</td>\n",
                             "      <td>0.2</td>\n",
                             "      <td>540000</td>\n",
                             "      <td>10</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>4</th>\n",
-                            "      <td>Tokyo</td>\n",
                             "      <td>5.01.2021</td>\n",
+                            "      <td>Tokyo</td>\n",
                             "      <td>0.1</td>\n",
                             "      <td>99000000</td>\n",
                             "      <td>55</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>5</th>\n",
-                            "      <td>Moscow</td>\n",
                             "      <td>6.01.2021</td>\n",
+                            "      <td>Moscow</td>\n",
                             "      <td>0.0</td>\n",
                             "      <td>34000</td>\n",
                             "      <td>-20</td>\n",
@@ -248,7 +248,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 75
+                    "execution_count": 71
                 }
             ],
             "metadata": {}
@@ -262,7 +262,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 76,
+            "execution_count": 52,
             "source": [
                 "rows, columns = dataFrame.shape\r\n",
                 "print(\"rows: \",rows)\r\n",
@@ -290,7 +290,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 77,
+            "execution_count": 53,
             "source": [
                 "dataFrame.head(2)\r\n",
                 "\r\n",
@@ -354,7 +354,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 77
+                    "execution_count": 53
                 }
             ],
             "metadata": {}
@@ -378,7 +378,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 78,
+            "execution_count": 54,
             "source": [
                 "dataFrame[2:4]"
             ],
@@ -440,7 +440,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 78
+                    "execution_count": 54
                 }
             ],
             "metadata": {}
@@ -461,7 +461,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 79,
+            "execution_count": 55,
             "source": [
                 "dataFrame.columns"
             ],
@@ -476,7 +476,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 79
+                    "execution_count": 55
                 }
             ],
             "metadata": {}
@@ -490,7 +490,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 80,
+            "execution_count": 56,
             "source": [
                 "dataFrame['Date']"
             ],
@@ -509,14 +509,14 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 80
+                    "execution_count": 56
                 }
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 81,
+            "execution_count": 57,
             "source": [
                 "# Types\r\n",
                 "type(dataFrame['Survival Rate'])"
@@ -530,7 +530,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 81
+                    "execution_count": 57
                 }
             ],
             "metadata": {}
@@ -544,7 +544,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 82,
+            "execution_count": 58,
             "source": [
                 "dataFrame[['City Name','Survival Rate', 'Number of People']]"
             ],
@@ -628,7 +628,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 82
+                    "execution_count": 58
                 }
             ],
             "metadata": {}
@@ -642,7 +642,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 83,
+            "execution_count": 59,
             "source": [
                 "# Maximum in a column:\r\n",
                 "print('Maximum of the people: ', dataFrame['Number of People'].max())\r\n",
@@ -680,7 +680,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 84,
+            "execution_count": 60,
             "source": [
                 "dataFrame.describe()"
             ],
@@ -778,14 +778,14 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 84
+                    "execution_count": 60
                 }
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 87,
+            "execution_count": 61,
             "source": [
                 "# Filtering\r\n",
                 "\r\n",
@@ -840,14 +840,14 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 87
+                    "execution_count": 61
                 }
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 88,
+            "execution_count": 62,
             "source": [
                 "dataFrame[dataFrame.Temperature >= 25]"
             ],
@@ -918,14 +918,14 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 88
+                    "execution_count": 62
                 }
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 90,
+            "execution_count": 63,
             "source": [
                 "# If we wanted to print out the day whic temperature was maximum.\r\n",
                 "\r\n",
@@ -941,7 +941,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 90
+                    "execution_count": 63
                 }
             ],
             "metadata": {}
@@ -956,7 +956,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 95,
+            "execution_count": 64,
             "source": [
                 "dataFrame[['Date','Temperature']][dataFrame.Temperature == dataFrame.Temperature.max()]\r\n",
                 "\r\n",
@@ -1005,7 +1005,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 95
+                    "execution_count": 64
                 }
             ],
             "metadata": {}
@@ -1028,7 +1028,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 96,
+            "execution_count": 65,
             "source": [
                 "dataFrame.index"
             ],
@@ -1041,7 +1041,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 96
+                    "execution_count": 65
                 }
             ],
             "metadata": {}
@@ -1061,7 +1061,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 101,
+            "execution_count": 66,
             "source": [
                 "dataFrame.set_index('Date', inplace = True)\r\n",
                 "\r\n",
@@ -1162,14 +1162,14 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 101
+                    "execution_count": 66
                 }
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 105,
+            "execution_count": 67,
             "source": [
                 "# To call a specisif row according to the index:\r\n",
                 "\r\n",
@@ -1188,7 +1188,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 105
+                    "execution_count": 67
                 }
             ],
             "metadata": {}
@@ -1202,7 +1202,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 106,
+            "execution_count": 68,
             "source": [
                 "dataFrame.reset_index(inplace = True)"
             ],
@@ -1211,7 +1211,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 107,
+            "execution_count": 69,
             "source": [
                 "dataFrame"
             ],
@@ -1309,7 +1309,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 107
+                    "execution_count": 69
                 }
             ],
             "metadata": {}
