--- a/Notebooks/pandas tutorial/Pandas Notebook - 2.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 2.ipynb
@@ -803,9 +803,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 42,
+            "execution_count": 50,
             "source": [
-                "df.to_csv('new.csv', index = False)"
+                "dataFrame.to_csv('new.csv', index = False, columns = ['Date', 'Temperature', 'Emotion Rate'])"
             ],
             "outputs": [],
             "metadata": {}
