--- a/Notebooks/pandas tutorial/Pandas Notebook - 2.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 2.ipynb
@@ -560,14 +560,6 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# End of reading section\r\n",
-                "***"
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
                 "***\r\n",
                 "# Read - Write CSV Files"
             ],
@@ -803,11 +795,35 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 50,
+            "execution_count": 52,
             "source": [
-                "dataFrame.to_csv('new.csv', index = False, columns = ['Date', 'Temperature', 'Emotion Rate'])"
+                "dataFrame.to_csv('new.csv', index = False)"
             ],
             "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## Writing to EXCEL"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 55,
+            "source": [
+                "dataFrame.to_excel(\"new.xlsx\", sheet_name = \"doomed ones\", index = False)"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# End of the section\r\n",
+                "***"
+            ],
             "metadata": {}
         }
     ],
