--- a/Notebooks/pandas tutorial/Pandas Notebook - 2.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 2.ipynb
@@ -10,7 +10,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 69,
             "source": [
                 "import pandas as pd"
             ],
@@ -26,7 +26,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": 70,
             "source": [
                 "df = pd.read_csv(\"Doomsday survival rate.csv\", sep = None, engine = \"python\")\r\n",
                 "df"
@@ -36,13 +36,21 @@
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "      ﻿Name       Date  Survival Rate  Number of People  Temperature  Bitcoin\n",
-                            "0    Ankara  1.01.2021            0.5            150000           15    45000\n",
-                            "1    London  1.02.2021            0.4            250000           25    85000\n",
-                            "2  New York  1.03.2021            0.3          15000000           30    90000\n",
-                            "3     Paris  1.04.2021            0.2           5400000           10    20000\n",
-                            "4     Tokyo  1.05.2021            0.1          99000000           55    60000\n",
-                            "5    Moscow  1.06.2021            0.0             34000          -20   150000"
+                            "      ﻿Name       Date  Survival Rate  Number of People  Temperature  Bitcoin  \\\n",
+                            "0    Ankara  1.01.2021            0.5            150000           15    45000   \n",
+                            "1    London  1.02.2021            0.4            250000           25    85000   \n",
+                            "2  New York  1.03.2021            0.3          15000000           30    90000   \n",
+                            "3     Paris  1.04.2021            0.2           5400000           10    20000   \n",
+                            "4     Tokyo  1.05.2021            0.1          99000000           55    60000   \n",
+                            "5    Moscow  1.06.2021            0.0             34000          -20   150000   \n",
+                            "\n",
+                            "   Emotion Rate  \n",
+                            "0            50  \n",
+                            "1     not given  \n",
+                            "2            35  \n",
+                            "3  error values  \n",
+                            "4            98  \n",
+                            "5             0  "
                         ],
                         "text/html": [
                             "<div>\n",
@@ -69,6 +77,7 @@
                             "      <th>Number of People</th>\n",
                             "      <th>Temperature</th>\n",
                             "      <th>Bitcoin</th>\n",
+                            "      <th>Emotion Rate</th>\n",
                             "    </tr>\n",
                             "  </thead>\n",
                             "  <tbody>\n",
@@ -80,6 +89,7 @@
                             "      <td>150000</td>\n",
                             "      <td>15</td>\n",
                             "      <td>45000</td>\n",
+                            "      <td>50</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>1</th>\n",
@@ -89,6 +99,7 @@
                             "      <td>250000</td>\n",
                             "      <td>25</td>\n",
                             "      <td>85000</td>\n",
+                            "      <td>not given</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>2</th>\n",
@@ -98,6 +109,7 @@
                             "      <td>15000000</td>\n",
                             "      <td>30</td>\n",
                             "      <td>90000</td>\n",
+                            "      <td>35</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>3</th>\n",
@@ -107,6 +119,7 @@
                             "      <td>5400000</td>\n",
                             "      <td>10</td>\n",
                             "      <td>20000</td>\n",
+                            "      <td>error values</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>4</th>\n",
@@ -116,6 +129,7 @@
                             "      <td>99000000</td>\n",
                             "      <td>55</td>\n",
                             "      <td>60000</td>\n",
+                            "      <td>98</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>5</th>\n",
@@ -125,6 +139,7 @@
                             "      <td>34000</td>\n",
                             "      <td>-20</td>\n",
                             "      <td>150000</td>\n",
+                            "      <td>0</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table>\n",
@@ -132,7 +147,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 17
+                    "execution_count": 70
                 }
             ],
             "metadata": {}
@@ -148,7 +163,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 71,
             "source": [
                 "df2 = pd.read_excel(\"Pandas notebook.xlsx\", \"Sayfa1\")\r\n",
                 "df2"
@@ -240,7 +255,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 3
+                    "execution_count": 71
                 }
             ],
             "metadata": {}
@@ -254,7 +269,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 72,
             "source": [
                 "survivalRate = {\r\n",
                 "    'City Name' : [\"Ankara\", \"London\", \"New York\", \"Paris\", \"Tokyo\", \"Moscow\"],\r\n",
@@ -361,7 +376,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 4
+                    "execution_count": 72
                 }
             ],
             "metadata": {}
@@ -375,7 +390,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 73,
             "source": [
                 "survivalRate2 = [\r\n",
                 "    ('Ankara', '1.01.2021', 0.5, 150000, 15),\r\n",
@@ -453,7 +468,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 5
+                    "execution_count": 73
                 }
             ],
             "metadata": {}
@@ -467,7 +482,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": 74,
             "source": [
                 "survivalRate3 = [\r\n",
                 "    {'City Name' : \"Ankara\", \"Date\" : \"1.01.2021\", \"Survival Rate\" : 0.5, \"Number of People\" : 150000, \"Temperature\" : 15},\r\n",
@@ -545,7 +560,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 18
+                    "execution_count": 74
                 }
             ],
             "metadata": {}
@@ -567,7 +582,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 35,
+            "execution_count": 75,
             "source": [
                 "dataFrame = pd.read_csv(\"Doomsday survival rate.csv\", nrows = 4, na_values =[\"error values\", \"not given\"] ,sep = None, engine = \"python\")\r\n",
                 "dataFrame"
@@ -664,7 +679,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 35
+                    "execution_count": 75
                 }
             ],
             "metadata": {}
@@ -680,7 +695,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 40,
+            "execution_count": 76,
             "source": [
                 "dataFrame = pd.read_csv(\"Doomsday survival rate.csv\", nrows = 4, na_values ={\r\n",
                 "    'Emotion Rate' : [\"error values\", \"not given\"],\r\n",
@@ -781,7 +796,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 40
+                    "execution_count": 76
                 }
             ],
             "metadata": {}
@@ -795,7 +810,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 52,
+            "execution_count": 77,
             "source": [
                 "dataFrame.to_csv('new.csv', index = False)"
             ],
@@ -811,11 +826,37 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 55,
+            "execution_count": 78,
             "source": [
                 "dataFrame.to_excel(\"new.xlsx\", sheet_name = \"doomed ones\", index = False)"
             ],
             "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "Now lets say you have two diffrent data frames and you want to write them into the same .xlsx file but in diffrent sheets.\r\n",
+                "<br>The way of doing that is, using a class called `ExcelWriter`:"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 79,
+            "source": [
+                "with pd.ExcelWriter(\"NewWrited.xlsx\") as writer:\r\n",
+                "    dataFrame.to_excel(writer, sheet_name = \"Sheet - 1\")\r\n",
+                "    df5.to_excel(writer, sheet_name = \"Sheet -2\")"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## All of the properties of the reading and writing can be accessed through documentation: https://pandas.pydata.org/docs/reference/io.html"
+            ],
             "metadata": {}
         },
         {
