Update Pandas Notebook - 2.ipynb

--- a/Notebooks/pandas tutorial/Pandas Notebook - 2.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 2.ipynb
@@ -10,7 +10,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 69,
+            "execution_count": 104,
             "source": [
                 "import pandas as pd"
             ],
@@ -26,9 +26,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 70,
+            "execution_count": 105,
             "source": [
-                "df = pd.read_csv(\"Doomsday survival rate.csv\", sep = None, engine = \"python\")\r\n",
+                "df = pd.read_csv(\"Excel and CSV Files/Doomsday survival rate.csv\", sep = None, engine = \"python\")\r\n",
                 "df"
             ],
             "outputs": [
@@ -147,7 +147,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 70
+                    "execution_count": 105
                 }
             ],
             "metadata": {}
@@ -163,9 +163,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 71,
+            "execution_count": 106,
             "source": [
-                "df2 = pd.read_excel(\"Pandas notebook.xlsx\", \"Sayfa1\")\r\n",
+                "df2 = pd.read_excel(\"Excel and CSV Files/Pandas notebook.xlsx\", \"Sayfa1\")\r\n",
                 "df2"
             ],
             "outputs": [
@@ -255,7 +255,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 71
+                    "execution_count": 106
                 }
             ],
             "metadata": {}
@@ -269,7 +269,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 72,
+            "execution_count": 107,
             "source": [
                 "survivalRate = {\r\n",
                 "    'City Name' : [\"Ankara\", \"London\", \"New York\", \"Paris\", \"Tokyo\", \"Moscow\"],\r\n",
@@ -376,7 +376,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 72
+                    "execution_count": 107
                 }
             ],
             "metadata": {}
@@ -390,7 +390,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 73,
+            "execution_count": 108,
             "source": [
                 "survivalRate2 = [\r\n",
                 "    ('Ankara', '1.01.2021', 0.5, 150000, 15),\r\n",
@@ -468,7 +468,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 73
+                    "execution_count": 108
                 }
             ],
             "metadata": {}
@@ -482,7 +482,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 74,
+            "execution_count": 109,
             "source": [
                 "survivalRate3 = [\r\n",
                 "    {'City Name' : \"Ankara\", \"Date\" : \"1.01.2021\", \"Survival Rate\" : 0.5, \"Number of People\" : 150000, \"Temperature\" : 15},\r\n",
@@ -560,7 +560,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 74
+                    "execution_count": 109
                 }
             ],
             "metadata": {}
@@ -582,9 +582,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 75,
+            "execution_count": 110,
             "source": [
-                "dataFrame = pd.read_csv(\"Doomsday survival rate.csv\", nrows = 4, na_values =[\"error values\", \"not given\"] ,sep = None, engine = \"python\")\r\n",
+                "dataFrame = pd.read_csv(\"Excel and CSV Files/Doomsday survival rate.csv\", nrows = 4, na_values =[\"error values\", \"not given\"] ,sep = None, engine = \"python\")\r\n",
                 "dataFrame"
             ],
             "outputs": [
@@ -679,7 +679,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 75
+                    "execution_count": 110
                 }
             ],
             "metadata": {}
@@ -695,9 +695,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 76,
+            "execution_count": 111,
             "source": [
-                "dataFrame = pd.read_csv(\"Doomsday survival rate.csv\", nrows = 4, na_values ={\r\n",
+                "dataFrame = pd.read_csv(\"Excel and CSV Files/Doomsday survival rate.csv\", nrows = 4, na_values ={\r\n",
                 "    'Emotion Rate' : [\"error values\", \"not given\"],\r\n",
                 "    'Survial Rate' : [-1],\r\n",
                 "    'Temperature'  : [-273]\r\n",
@@ -796,7 +796,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 76
+                    "execution_count": 111
                 }
             ],
             "metadata": {}
@@ -810,9 +810,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 77,
+            "execution_count": 112,
             "source": [
-                "dataFrame.to_csv('new.csv', index = False)"
+                "dataFrame.to_csv('Excel and CSV Files/new.csv', index = False)"
             ],
             "outputs": [],
             "metadata": {}
@@ -826,9 +826,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 78,
+            "execution_count": 113,
             "source": [
-                "dataFrame.to_excel(\"new.xlsx\", sheet_name = \"doomed ones\", index = False)"
+                "dataFrame.to_excel(\"Excel and CSV Files/new.xlsx\", sheet_name = \"doomed ones\", index = False)"
             ],
             "outputs": [],
             "metadata": {}
@@ -843,9 +843,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 79,
+            "execution_count": 114,
             "source": [
-                "with pd.ExcelWriter(\"NewWrited.xlsx\") as writer:\r\n",
+                "with pd.ExcelWriter(\"Excel and CSV Files/NewWrited.xlsx\") as writer:\r\n",
                 "    dataFrame.to_excel(writer, sheet_name = \"Sheet - 1\")\r\n",
                 "    df5.to_excel(writer, sheet_name = \"Sheet -2\")"
             ],
