Update Pandas Notebook - 3 Handling Missing Data.ipynb

--- a/Notebooks/pandas tutorial/Pandas Notebook - 3 Handling Missing Data.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 3 Handling Missing Data.ipynb
@@ -473,7 +473,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "If wanted, by a help of a dictionary, certain values in the certain columns can be altered."
+                "### If wanted, by a help of a dictionary, certain values in the certain columns can be altered."
             ],
             "metadata": {}
         },
