Update Pandas Notebook - 3 Handling Missing Data.ipynb

--- a/Notebooks/pandas tutorial/Pandas Notebook - 3 Handling Missing Data.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 3 Handling Missing Data.ipynb
@@ -10,7 +10,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 133,
+            "execution_count": 2,
             "source": [
                 "import pandas as pd"
             ],
@@ -26,7 +26,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 134,
+            "execution_count": 3,
             "source": [
                 "dataframe = pd.read_csv(\"Excel and CSV Files/Ankara Weather Data.csv\", sep = None, engine = \"python\", parse_dates = [\"Date\"])\r\n",
                 "dataframe.set_index(\"Date\", inplace = True)\r\n",
@@ -239,7 +239,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 134
+                    "execution_count": 3
                 }
             ],
             "metadata": {}
@@ -253,7 +253,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 135,
+            "execution_count": 4,
             "source": [
                 "new_df = dataframe.fillna(0)\r\n",
                 "new_df"
@@ -465,7 +465,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 135
+                    "execution_count": 4
                 }
             ],
             "metadata": {}
@@ -479,7 +479,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 136,
+            "execution_count": 5,
             "source": [
                 "new_df = dataframe.fillna({\r\n",
                 "    \"Temperature\"   : 0,\r\n",
@@ -695,7 +695,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 136
+                    "execution_count": 5
                 }
             ],
             "metadata": {}
@@ -710,7 +710,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 137,
+            "execution_count": 6,
             "source": [
                 "new_df = dataframe.fillna(method = \"bfill\")\r\n",
                 "new_df"
@@ -922,7 +922,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 137
+                    "execution_count": 6
                 }
             ],
             "metadata": {}
@@ -936,7 +936,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 138,
+            "execution_count": 7,
             "source": [
                 "new_df = dataframe.interpolate(method = \"time\")\r\n",
                 "# new_df.fillna({'Event': 'no event'}, inplace = True)\r\n",
@@ -1149,7 +1149,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 138
+                    "execution_count": 7
                 }
             ],
             "metadata": {}
@@ -1163,7 +1163,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 145,
+            "execution_count": 8,
             "source": [
                 "new_df = dataframe.dropna(thresh = 1)\r\n",
                 "new_df"
@@ -1367,7 +1367,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 145
+                    "execution_count": 8
                 }
             ],
             "metadata": {}
@@ -1381,7 +1381,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 148,
+            "execution_count": 9,
             "source": [
                 "dateRange = pd.date_range(\"01.01.2021\", \"21.01.2021\")\r\n",
                 "idx = pd.DatetimeIndex(dateRange)\r\n",
@@ -1595,9 +1595,87 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 148
+                    "execution_count": 9
                 }
             ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "***\r\n",
+                "# Part 2 "
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 12,
+            "source": [
+                "import numpy as np"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "When creating, downloading or scraping data for dataframes, sometimes a missing datas occur in a special way.\r\n",
+                "<br>For example -9999 might be the placeholder for missing data. Or similiar numbers migt be as well.\r\n",
+                "\r\n",
+                "In this situaions we can use `.replace()` method.\r\n",
+                "<br>It is used as `dataframe.replace(replaced, replacer)`\r\n",
+                "<br>We can use `np.NaN`"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "But what if we had two or more diffrent values?\r\n",
+                "<br>For example -888 too.\r\n",
+                "<br>We can commit the \"replaced\" paramter as a list: [-9999, -888]"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "If the value that we are replacing is being used in some columns, we might want to prevent that.\r\n",
+                "<br>We can use dictionaries,"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 16,
+            "source": [
+                "newDF = dataframe.replace({\r\n",
+                "    'Temperature'   : -9999,\r\n",
+                "    'Event'         : 0,\r\n",
+                "    'Windspeed'     : -9999\r\n",
+                "}, np.NaN)"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "we can also use mapping to replace values."
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "newDF = dataframe.replace({\r\n",
+                "    -9999       :   np.NaN,\r\n",
+                "    'No Event'  :   'Sunny',\r\n",
+                "})"
+            ],
+            "outputs": [],
             "metadata": {}
         }
     ],
