Update Pandas Notebook - 3 Handling Missing Data.ipynb

--- a/Notebooks/pandas tutorial/Pandas Notebook - 3 Handling Missing Data.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 3 Handling Missing Data.ipynb
@@ -1677,6 +1677,31 @@
             ],
             "outputs": [],
             "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### What if the values in the dataframes had unit of measures?\r\n",
+                "For example Temperatures had F as a fahrenheit and Windspeed had a mph. \r\n",
+                "<br>what we should is, chopping the units away.\r\n",
+                "Best way to do is using Regex(Regular Expressions).\r\n",
+                "Regex are used to recognize patterns:"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 17,
+            "source": [
+                "newDf = dataframe.replace('[A-Za-z]','', regex = True)"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [],
+            "metadata": {}
         }
     ],
     "metadata": {
