Update Pandas Notebook - 3 Handling Missing Data.ipynb

--- a/Notebooks/pandas tutorial/Pandas Notebook - 3 Handling Missing Data.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 3 Handling Missing Data.ipynb
@@ -1700,6 +1700,34 @@
         },
         {
             "cell_type": "markdown",
+            "source": [
+                "Now if we do that every value in the Event column will be erased.\r\n",
+                "In order to prevent that we have to use dictionary:"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 19,
+            "source": [
+                "newDf = dataframe.replace({\r\n",
+                "    'Temperature'   :   '[A-Za-z]',\r\n",
+                "    'Windspeed'     :   '[A-Za-z]'},'',\r\n",
+                "    \r\n",
+                "    regex = True)"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
             "source": [],
             "metadata": {}
         }
