Update Pandas Notebook - 3 Handling Missing Data.ipynb

--- a/Notebooks/pandas tutorial/Pandas Notebook - 3 Handling Missing Data.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 3 Handling Missing Data.ipynb
@@ -1721,14 +1721,182 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
-            "source": [],
-            "outputs": [],
+            "execution_count": 20,
+            "source": [
+                "df = pd.DataFrame({\r\n",
+                "    'score': ['exceptional','average', 'good', 'poor', 'average', 'exceptional'],\r\n",
+                "    'student': ['rob', 'maya', 'parthiv', 'tom', 'julian', 'erica']\r\n",
+                "})\r\n",
+                "df"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "         score  student\n",
+                            "0  exceptional      rob\n",
+                            "1      average     maya\n",
+                            "2         good  parthiv\n",
+                            "3         poor      tom\n",
+                            "4      average   julian\n",
+                            "5  exceptional    erica"
+                        ],
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>score</th>\n",
+                            "      <th>student</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>exceptional</td>\n",
+                            "      <td>rob</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>1</th>\n",
+                            "      <td>average</td>\n",
+                            "      <td>maya</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2</th>\n",
+                            "      <td>good</td>\n",
+                            "      <td>parthiv</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>3</th>\n",
+                            "      <td>poor</td>\n",
+                            "      <td>tom</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>4</th>\n",
+                            "      <td>average</td>\n",
+                            "      <td>julian</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>5</th>\n",
+                            "      <td>exceptional</td>\n",
+                            "      <td>erica</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 20
+                }
+            ],
             "metadata": {}
         },
         {
             "cell_type": "markdown",
-            "source": [],
+            "source": [
+                "If we wanted to replace the values that are string with numbers:\r\n",
+                "<br>First values are to be replaced; second values are the replacer."
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 21,
+            "source": [
+                "df.replace(['poor', 'average', 'good', 'exceptional'], [1,2,3,4])"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "   score  student\n",
+                            "0      4      rob\n",
+                            "1      2     maya\n",
+                            "2      3  parthiv\n",
+                            "3      1      tom\n",
+                            "4      2   julian\n",
+                            "5      4    erica"
+                        ],
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>score</th>\n",
+                            "      <th>student</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>4</td>\n",
+                            "      <td>rob</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>1</th>\n",
+                            "      <td>2</td>\n",
+                            "      <td>maya</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2</th>\n",
+                            "      <td>3</td>\n",
+                            "      <td>parthiv</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>3</th>\n",
+                            "      <td>1</td>\n",
+                            "      <td>tom</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>4</th>\n",
+                            "      <td>2</td>\n",
+                            "      <td>julian</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>5</th>\n",
+                            "      <td>4</td>\n",
+                            "      <td>erica</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 21
+                }
+            ],
             "metadata": {}
         }
     ],
