End of this part

--- a/Notebooks/pandas tutorial/Pandas Notebook - 3 Handling Missing Data.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 3 Handling Missing Data.ipynb
@@ -1898,6 +1898,14 @@
                 }
             ],
             "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "***\r\n",
+                "# End of these parts"
+            ],
+            "metadata": {}
         }
     ],
     "metadata": {
