--- a/Notebooks/pandas tutorial/Pandas Notebook - 4 Grouping.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 4 Grouping.ipynb
@@ -2,8 +2,10 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": null,
-            "source": [],
+            "execution_count": 1,
+            "source": [
+                "import pandas as pd"
+            ],
             "outputs": [],
             "metadata": {}
         }
@@ -11,7 +13,23 @@
     "metadata": {
         "orig_nbformat": 4,
         "language_info": {
-            "name": "python"
+            "name": "python",
+            "version": "3.9.6",
+            "mimetype": "text/x-python",
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "pygments_lexer": "ipython3",
+            "nbconvert_exporter": "python",
+            "file_extension": ".py"
+        },
+        "kernelspec": {
+            "name": "python3",
+            "display_name": "Python 3.9.6 64-bit"
+        },
+        "interpreter": {
+            "hash": "ab1f098d8d894e56d47723677a029b667719412772dfd5ab18cd5525d27390b1"
         }
     },
     "nbformat": 4,
